1998-10-20  Rosanna Yuen  <rwsy@mit.edu>

	* menu.c (game_hint_callback): added another type of hint response
	in the  format of "Move the " + card name + " " + "off the board"
	* fortunes.c (get-hint): added hint support
	
1998-10-20  Rosanna Yuen  <rwsy@mit.edu>

	* osmosis.scm (button-double-clicked): added double-click support

1998-10-19  Rosanna Yuen  <rwsy@mit.edu>

	* clock.scm (get-hint): added hint support. 

1998-10-19  Rosanna Yuen  <rwsy@mit.edu>

	* klondike.scm : added hint support.

1998-10-17  Rosanna Yuen  <rwsy@mit.edu>

	* canfield.scm: added hint support.

1998-10-16  Rosanna Yuen  <rwsy@mit.edu>

	* odessa.scm: completed scoring.  now it scores placing in
	foundations correctly.  also counts points that accrue when
	dealing.
	
1998-10-16    <jrb@redhat.com>

	* menu.c (file_new_game_callback): resets the timer.
	(restart_callback): resets the timer.
	* dialog.c (select_game_callback): resets the timer.

1998-10-16  Rosanna Yuen  <rwsy@mit.edu>
	
	* klondike.scm (complete-transaction): added scoring functionality

1998-10-16  Rosanna Yuen  <rwsy@mit.edu>

	* canfield.scm: added a new game	

1998-10-15  Rosanna Yuen  <rwsy@mit.edu>

	* fortunes.scm: added a new game

Wed Sep 23 Felix Bellaby <felix@pooh.u-net.com>
	* scheme_messages: new file of gettext msgids for *.scm filenames
	* sol.c: (main_prog) scans dir for installed games
	(start_timer) (stop_timer) C level control over timer.
	(timer_cb) updates time display, executes any scheme callback and 
	checks for end of game.
 	(create_press_data) minor fix for show card
	* menu.c: (create_menus) lists games found in dir with i18n.
	(file_new_game_callback) starts timer.
	* event.c: (end_of_game_test) stops timer.
	* cscmi.c: (scm_get_timeout) (scm_set_timeout) Scheme level control
	of when scheme timer callback will be invoked.
	(scm_set_lambda) used to set scheme timer callback function.
	(cscm_init) relocates scheme stuff from sol.c
	* TODO ticked off scan dir, timer.
	