@@ -19,7 +19,7 @@ each pile.  Tableau can be built down in alternating color.  Groups of
 cards can be moved.  
 
 Foundations -- Four piles top right.  Deal one card face up on first
-foundation pile.  This card is now the base card.
+foundation pile.  This card is now the base card.  Built up by suit.
 
 // -------------------- Goal ------------------------------------
 
@@ -28,8 +28,8 @@ Move all cards to the foundation piles.
 // -------------------- Rules -----------------------------------
 
 Cards in the tableau are built down by alternating color.  Groups of
-cards can be moved.  An empty pile in the tableau is filled
-automatically from the reserve.  If the reserve is empty, an empty pile
+cards can be moved.  An empty slot in the tableau is filled
+automatically from the reserve.  If the reserve is empty, an empty slot
 can be filled by any card or group of cards in sequence.
 
 Cards are flipped from the stock to the waste by three.  If the last
