@@ -1,0 +1,66 @@
+Rules for eagle_wing.scm
+Copyright (C) 1998 Rosanna Yuen <rwsy@mit.edu>
+
+// -------------------- Setup -----------------------------------
+
+Number of Decks -- 1
+
+Stock -- Top left pile.  The rest of the deck is placed here after
+dealing the tableau.  Cards are turned over one at a time to waste.  Two
+redeals.
+
+Waste -- Directly to the right of Stock.  To be taken from stock.  Top
+card available for play.
+
+Reserve -- Middle (and lowest) slot.  Deal thirteen cards face down
+here.  Flip card to fill any spaces in the tableau.  When only one
+card is left in the reserve, it will flip up and can be played on
+foundation or another slot.
+
+Tableau -- Eight slots (four to the left and four to the right of
+reserve.)  Deal one card face up per slot.  Tableau can be built down
+by suit.  Cards can be moved singly to other slots on the tableau, or
+in a group on to the foundation.  Each tableau slot can hold a maximum
+of three cards.
+
+Foundations -- Four piles top right.  Deal one card face up on first
+foundation pile.  This card is now the base card.  Built up by suit.
+
+// -------------------- Goal ------------------------------------
+
+Move all cards to the foundation piles.
+
+// -------------------- Rules -----------------------------------
+
+Cards in the tableau are built down by suit.  Cards can only be moved
+singly to another tableau slot.  However, to ease monotony, groups of
+cards can be moved to foundation.  An empty slot in the tableau is
+filled automatically from the reserve.  If the reserve is empty, an
+empty slot can be filled by a card from the waste.
+
+The reserve exists mainly to deal cards into empty slots of the
+tableau.  However, when there is only one card left in the tableau, it
+will become visible and is in play.
+
+Cards are flipped from the stock to the waste singly.  When the stock
+is empty, move all cards in waste back to the stock, maintaining
+order.  You can go through the deck three times.
+
+Foundations are built up in suit from the base card (first card dealt to
+first foundation)  New foundations are started when a card of the same
+rank as the first card placed during the dealing period are placed on
+empty foundation piles.  Aces are placed on Kings, and twos on aces.
+Cards in foundations are not in play.
+
+// -------------------- Options ---------------------------------
+
+// -------------------- Scoring ---------------------------------
+
+Each card in the foundation piles scores one point.
+
+Maximum possible score:  52
+
+// -------------------- Strategy --------------------------------
+
+Check before piling cards in a tableau.  Remember the three card in a
+slot rule.
