@@ -1,3 +1,7 @@
+1998-10-21  Rosanna Yuen  <rwsy@mit.edu>
+
+	* eagle_wing.scm : added a new game
+
 1998-10-20  Rosanna Yuen  <rwsy@mit.edu>
 
 	* menu.c (game_hint_callback): added another type of hint response
